# stripe-checkout-sample-rust

./: .env.example  .gitattributes  Cargo.toml  README.md
src/: controllers.rs  main.rs  model.rs
