[package]
name = "stripe-sample-rust"
version = "0.1.0"
authors = ["Rui Rebelo <rrebelo@gadgetish.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files ="*"
dotenv="*"
serde="1.*"
serde_json="1.*"
lazy_static = "1.*"
futures="*"
reqwest = { version = "*", features = ["json"] }

[dev-dependencies]
tokio-test = "*"
actix-rt = "*"
